--- a/gradle.properties
+++ b/gradle.properties
@@ -14,7 +14,7 @@ loom_version=1.12-SNAPSHOT
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=net.gooseman.inferno_utils
+maven_group=net.gooseman
 archives_base_name=inferno_utils
 
 # Dependencies
